--- a/petycja_norweskie/petitions/locale/pl/LC_MESSAGES/django.po
+++ b/petycja_norweskie/petitions/locale/pl/LC_MESSAGES/django.po
@@ -7,19 +7,27 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-04-09 22:45+0000\n"
-"PO-Revision-Date: 2017-04-10 00:48+0200\n"
+"POT-Creation-Date: 2017-04-10 00:55+0000\n"
+"PO-Revision-Date: 2017-04-10 02:55+0200\n"
+"Last-Translator: Adam Dobrawy <naczelnik@jawnosc.tk>\n"
+"Language-Team: \n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"Last-Translator: Adam Dobrawy <naczelnik@jawnosc.tk>\n"
-"Language-Team: \n"
 "X-Generator: Poedit 1.8.7.1\n"
 
-#: apps.py:10 models.py:40 models.py:52 models.py:69
+#: admin.py:28
+msgid "Signature count"
+msgstr "Liczba podpisów"
+
+#: admin.py:32
+msgid "Permission definition count"
+msgstr "Liczba definicji zgód"
+
+#: apps.py:10 models.py:41 models.py:53 models.py:70
 msgid "Petition"
 msgstr "Petycja"
 
@@ -83,41 +91,53 @@ msgstr "Wiadomość końcowa"
 msgid "Messages shows after signatures"
 msgstr "Wiadomość pokazywana po podpisach"
 
-#: models.py:41
+#: models.py:38
+msgid "Sign"
+msgstr "Podpisz"
+
+#: models.py:42
 msgid "Petitions"
 msgstr "Petycje"
 
-#: models.py:54
+#: models.py:55
 msgid "Define default check on permission field"
 msgstr "Czy domyślnie zaznaczone?"
 
-#: models.py:55
+#: models.py:56
 msgid "Define the field is required or not"
 msgstr "Czy wymagane?"
 
-#: models.py:56
+#: models.py:57
 msgid "Define orders of the permissions in form"
 msgstr "Określ kolejność"
 
-#: models.py:59
-msgid "Permission"
-msgstr "Zezwolenie"
+#: models.py:60 models.py:88
+msgid "Definition"
+msgstr "Definicja"
 
-#: models.py:60
-msgid "Permissions"
-msgstr "Zezwolenia"
+#: models.py:61
+msgid "Definitions"
+msgstr "Definicje"
 
-#: models.py:78 models.py:88
+#: models.py:79 models.py:89
 msgid "Signature"
 msgstr "Podpis"
 
-#: models.py:79
+#: models.py:80
 msgid "Signatures"
 msgstr "Podpisy"
 
-#: models.py:87
-msgid "Definition"
-msgstr "Definicja"
+#: models.py:92
+msgid "Permission"
+msgstr "Zezwolenie"
+
+#: models.py:93
+msgid "Permissions"
+msgstr "Zezwolenia"
+
+#: templates/petitions/petition_detail.html:16
+msgid "Signature list"
+msgstr "Wykaz podpisów"
 
 #: urls.py:12
 msgid "^petitions-(?P<slug>[\\w-]+)$"
@@ -128,9 +148,13 @@ msgid "^petitions-(?P<slug>[\\w-]+)/signature$"
 msgstr "^petycje-(?P<slug>[\\w-]+)$"
 
 #: urls.py:14
+msgid "^petitions-(?P<slug>[\\w-]+)/create$"
+msgstr "^petitions-(?P<slug>[\\w-]+)/stworz$"
+
+#: urls.py:15
 msgid "^petitions-(?P<slug>[\\w-]+)/signature-(?P<page>\\d+)$"
 msgstr "^petycje-(?P<slug>[\\w-]+)/podpisy-(?P<page>\\d+)$"
 
-#: urls.py:16
+#: urls.py:17
 msgid "^petitions-(?P<slug>[\\w-]+)/thank$"
 msgstr "^petycje-(?P<slug>[\\w-]+)/podziekowanie$"
